# mpg123-rs

./: .gitignore  Cargo.toml  README.md
src/: error.rs  lib.rs
tests/: integration_test.rs
