[package]
name = "mpg123"
version = "0.1.2"
authors = ["kisasexypantera94 <green.grinya@gmail.com>"]
edition = "2018"
description = "An opinionated wrapper for mpg123-sys"
readme = "README.md"
license = "MIT"
repository = "https://github.com/kisasexypantera94/mpg123-rs"
categories = ["multimedia", "multimedia::audio"]
keywords = ["mpg123", "decoder"]


[dependencies]
mpg123-sys = "0.6.0"
libc = "0.2"